--- a/doc/smp_ena_dis_zoning.8
+++ b/doc/smp_ena_dis_zoning.8
@@ -10,12 +10,13 @@ smp_ena_dis_zoning \- invoke ENABLE DISABLE ZONING SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ENABLE DISABLE ZONING function request
-to a SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
-\fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
-be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
-to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
-differentiate between HBAs if there are multiple present.
+Sends a SAS Serial Management Protocol (SMP) ENABLE DISABLE ZONING function
+request to an SMP target. The SMP target is identified by the
+\fISMP_DEVICE\fR and the \fI\-\-sa=SAS_ADDR\fR. Depending on the interface,
+the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR. The mpt
+interface uses \fISMP_DEVICE\fR to identify a HBA (an SMP initiator) and
+needs the additional \fI,N\fR to differentiate between HBAs if there are
+multiple present.
 .PP
 If neither \fI\-\-disable\fR nor \fI\-\-ena\-dis=ED\fR options are given then
 enable zoning (i.e. "\-\-ena\-dis=1") is assumed.
