--- a/doc/smp_rep_exp_route_tbl.8
+++ b/doc/smp_rep_exp_route_tbl.8
@@ -10,9 +10,9 @@ smp_rep_exp_route_tbl \- invoke REPORT EXPANDER ROUTE TABLE LIST SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) REPORT EXPANDER ROUTE TABLE LIST
-function request to a SMP target and decodes or outputs the response. The SMP
-target is identified by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR.
+Sends a SAS Serial Management Protocol (SMP) REPORT EXPANDER ROUTE TABLE LIST
+function request to an SMP target and decodes or outputs the response. The
+SMP target is identified by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR.
 Depending on the interface, the \fISAS_ADDR\fR may be deduced from the
 \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
