--- a/doc/smp_rep_self_conf_stat.8
+++ b/doc/smp_rep_self_conf_stat.8
@@ -10,8 +10,8 @@ smp_rep_self_conf_stat \- invoke REPORT SELF-CONFIGURATION STATUS SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) REPORT SELF-CONFIGURATION STATUS
-function request to a SMP target. The SMP target is identified by the
+Sends a SAS Serial Management Protocol (SMP) REPORT SELF-CONFIGURATION STATUS
+function request to an SMP target. The SMP target is identified by the
 \fISMP_DEVICE\fR and the \fI\-\-sa=SAS_ADDR\fR. Depending on the interface,
 the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR. The mpt interface
 uses \fISMP_DEVICE\fR to identify a HBA (an SMP initiator) and needs the
