--- a/doc/smp_write_gpio.8
+++ b/doc/smp_write_gpio.8
@@ -1,4 +1,4 @@
-.TH SMP_WRITE_GPIO "8" "June 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_WRITE_GPIO "8" "August 2011" "smp_utils\-0.97" SMP_UTILS
 .SH NAME
 smp_write_gpio \- invoke WRITE GPIO REGISTER (ENHANCED) SMP function
 .SH SYNOPSIS
@@ -10,8 +10,8 @@ smp_write_gpio \- invoke WRITE GPIO REGISTER (ENHANCED) SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) WRITE GPIO REGISTER or a WRITE GPIO
-REGISTER ENHANCED function request to a SMP target. The SMP target is
+Sends a SAS Serial Management Protocol (SMP) WRITE GPIO REGISTER or a WRITE
+GPIO REGISTER ENHANCED function request to an SMP target. The SMP target is
 identified by the \fISMP_DEVICE\fR and the \fISAS_ADDR\fR. Depending on the
 interface, the \fISAS_ADDR\fR may be deduced from the \fISMP_DEVICE\fR. The
 mpt interface uses \fISMP_DEVICE\fR to identify a HBA (an SMP initiator)
@@ -27,12 +27,8 @@ the sideband signals in wide internal cables. To stop other initiators
 in a multi\-initiator domain from accessing those sideband signals,
 the virtual SMP (target) port is not indicated in a DISCOVER response.
 .PP
-In SAS\-2 this function was made obsolete and seemingly replaced by a
-function called WRITE GPIO REGISTER ENHANCED with a reference to the
-same SFF document. However the author can find no version of SFF\-8485
-that defines the WRITE GPIO REGISTER ENHANCED function. In SAS\-2.1
-both the WRITE GPIO REGISTER and WRITE GPIO REGISTER ENHANCED functions
-were dropped.
+For notes on the SMP WRITE GPIO REGISTER ENHANCED function see the section 
+on the ENHANCED FUNCTION below.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
@@ -91,6 +87,22 @@ increase the verbosity of the output. Can be used multiple times.
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
+.SH ENHANCED FUNCTION
+In the technical review of SAS\-2 prior to standardization in this t10
+document: 08\-212r8.pdf (page 871 or 552) there is a comment that the
+READ GPIO REGISTER and WRITE GPIO REGISTER function headers (i.e. first
+4 bytes) do not comply with all the other SMP functions in SAS-2.
+.PP
+There is a suggestion that enhanced variants be introduced in the next
+version of the SFF\-8485 document. If that ever happened then it has
+not been made public. In SAS\-2.1 both the READ and WRITE GPIO REGISTER
+functions have been made obsolete and the corresponding ENHANCED function
+numbers are "restricted" for SFF\-8485.
+.PP
+If the \fI\-\-enhanced\fR option is given then the ENHANCED function 
+number is sent; the register type, index and count fields (1  byte each) 
+are increased by two byte positions leaving enough space for a compliant
+SAS\-2 SMP header to be built.
 .SH CONFORMING TO
 The SMP WRITE GPIO REGISTER function is defined in SFF\-8485 (see
 www.sffcommittee.com ) together with its corresponding READ
