--- a/doc/smp_zone_activate.8
+++ b/doc/smp_zone_activate.8
@@ -9,9 +9,9 @@ smp_zone_activate \- invoke ZONE ACTIVATE SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ZONE ACTIVATE function request to a
-SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
-\fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
+Sends a SAS Serial Management Protocol (SMP) ZONE ACTIVATE function request
+to an SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and
+the \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
 be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
 differentiate between HBAs if there are multiple present.
