--- a/doc/smp_zone_lock.8
+++ b/doc/smp_zone_lock.8
@@ -10,8 +10,8 @@ smp_zone_lock \- invoke ZONE LOCK SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ZONE LOCK function request to a SMP
-target. The SMP target is identified by the \fISMP_DEVICE\fR and the
+Sends a SAS Serial Management Protocol (SMP) ZONE LOCK function request to an
+SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
 be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
