--- a/doc/smp_zone_unlock.8
+++ b/doc/smp_zone_unlock.8
@@ -10,8 +10,8 @@ smp_zone_unlock \- invoke ZONE UNLOCK SMP function
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SAS Management Protocol (SMP) ZONE UNLOCK function request to a SMP
-target. The SMP target is identified by the \fISMP_DEVICE\fR and the
+Sends a SAS Serial Management Protocol (SMP) ZONE UNLOCK function request to
+an SMP target. The SMP target is identified by the \fISMP_DEVICE\fR and the
 \fI\-\-sa=SAS_ADDR\fR. Depending on the interface, the \fISAS_ADDR\fR may
 be deduced from the \fISMP_DEVICE\fR. The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
@@ -20,7 +20,7 @@ differentiate between HBAs if there are multiple present.
 If this function is successful then a Broadcast (Change) is sent from either
 each zone group whose zone permission table entries or zone phy information
 has changed; or from zone group 1. Broadcast (Change) should cause a
-management application client behind a SMP initiator port (e.g. a SAS HBA)
+management application client behind an SMP initiator port (e.g. a SAS HBA)
 to start a discover process.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
