--- a/trunk/README
+++ b/trunk/README
@@ -1,11 +1,12 @@
 This is a package of utilities. Each utility sends a Serial Attached
-SCSI (SAS) Serial Management Protocol (SMP) request to a SMP target.
+SCSI (SAS) Serial Management Protocol (SMP) request to an SMP target.
 If the request fails then the error is decoded. If the request succeeds
 then the response is either decoded, printed out in hexadecimal or
-output in binary. This package supports multiple interfaces since
-SMP passthroughs are not mature. This package supports the linux
-2.4 and 2.6 series and should be easy to port to other operating
-systems.
+output in binary. This package was written using the linux 2.6 series
+and has been ported to FreeBSD and Solaris.
+
+For specific information about Linux see README.linux; for FreeBSD see
+README.freebsd and for Solaris see README.solaris .
 
 See COVERAGE file for more information about the coverage of various
 SMP functions.
@@ -27,10 +28,10 @@ The reference documents are:
   spl2r02.pdf          www.t10.org   current draft
   SFF_8485.PDF         www.sffcommittee.com   SGPIO revision 0.7
 
-In SAS-2.1 the lower levels were put into a document of that name
-while the higher levels were put in a new document called the
-SAS Protocol Layer (SPL).
+In SAS-2.1 the physical layer was put into a document of that name
+(i.e. SAS-2.1) while the higher layers were put in a new document called
+the SAS Protocol Layer (SPL).
 
 
 Doug Gilbert
-9th August 2011
+22nd August 2011
