--- a/trunk/doc/smp_rep_phy_event_list.8
+++ b/trunk/doc/smp_rep_phy_event_list.8
@@ -1,4 +1,4 @@
-.TH SMP_REP_PHY_EVENT_LIST "8" "May 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_REP_PHY_EVENT_LIST "8" "August 2011" "smp_utils\-0.97" SMP_UTILS
 .SH NAME
 smp_rep_phy_event_list \- invoke REPORT PHY EVENT LIST SMP function
 .SH SYNOPSIS
@@ -17,6 +17,11 @@ request to an SMP target. The SMP target is identified by the
 uses \fISMP_DEVICE\fR to identify a HBA (an SMP initiator) and needs the
 additional \fI,N\fR to differentiate between HBAs if there are multiple
 present.
+.PP
+Reports zero or more phy event list descriptors. Each descriptor contains a
+phy identifier, a phy event source, a phy event (i.e. a count) and a peak
+value detector theshold. At least one phy event should be maintained for
+each phy.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
