--- a/INSTALL
+++ b/INSTALL
@@ -5,9 +5,10 @@ extracted tree, and then:
   # ./configure
   # make
   # make install
+
 The last command will most likely require root privileges and will
 place the binaries in the /usr/local/bin directory. Since the utilities
-need root (superuser) permissions some distrubution prefer to place the
+need root (superuser) permissions some distrubutions prefer to place the
 binaries in the /usr/sbin directory. To do that and place the man pages
 in their normal (Linux) location the ./configure line could be expanded
 to:
@@ -31,8 +32,5 @@ be linked instead with the static library with this invocation:
   # ./configure --disable-shared
 
 
-For architecture depend information see the README.<os> files.
-
-
 Douglas Gilbert
-6th August 2011
+22nd August 2011
