--- a/trunk/doc/smp_utils.8
+++ b/trunk/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "December 2011" "smp_utils\-0.97" SMP_UTILS
+.TH SMP_UTILS "8" "January 2012" "smp_utils\-0.97" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -245,7 +245,10 @@ these drafts, a break from t10.org tradition.
 .PP
 The two utilities for reading and writing to GPIO registers, smp_read_gpio
 and smp_write_gpio, are defined in the Small Form Factor document SFF-8485
-found at http://www.sffcommittee.com .
+found at http://www.sffcommittee.com . "Enhanced" versions of the
+corresponding SMP functions have been mentioned in some drafts but no
+definitions have been published and the references have been removed in more
+recent drafts.
 .PP
 In this section of each utility's man page is the first standard in which
 the associated SMP function appeared and whether there have been significant
@@ -261,7 +264,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2011 Douglas Gilbert
+Copyright \(co 2006\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
