--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "January 2012" "smp_utils\-0.97" SMP_UTILS
+.TH SMP_UTILS "8" "January 2012" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -217,16 +217,26 @@ SFF\-8087 cable). To interact with a SES device, see the sg_ses utility.
 .PP
 Often expander phys are grouped in fours on the same connector (e.g.
 SFF-8088). Care needs to be taken when multiple expanders are interconnected.
-An enclosure universal port is one in which the "table to table supported" 
-attribute is set (in the REPORT GENERAL response) and the associated phys 
-have the table routing attribute (in the DISCOVER response). Enclosure 
-universal ports were introduced in SAS\-2 and have no restrictions when
-used to interconnect expanders or connect end devices. An enclosure out port
-is one in which the "table to table supported" attribute is clear and the
-associated phys have the table routing attribute. An enclosure in port is one
-in which the associated phys have the subtractive routing attribute. When
-universal ports are not available, an expander interconnect should be between
-an in port and an out port.
+An enclosure
+.B universal
+port is one in which the "table to table supported" attribute is set (in
+the REPORT GENERAL response) and the associated phys have the table routing
+attribute (in the DISCOVER response). Enclosure 
+.B universal
+ports were introduced in SAS\-2 and have few restrictions when used to
+interconnect expanders or connect end devices. An enclosure
+.B out
+port is one in which the "table to table supported" attribute is clear and
+the associated phys have the table routing attribute. An enclosure
+.B in
+port is one in which the associated phys have the subtractive routing
+attribute. When
+.B universal
+ports are not available, an expander interconnect should be between an
+.B in
+port and an
+.B out
+port.
 .SH EXAMPLES
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html .
 .SH CONFORMING TO
