--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+smp-utils (0.98-0.1) unstable; urgency=low
+
+  * xxxxxx
+
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 24 Jan 2012 11:00:00 -0500
+
 smp-utils (0.97-0.1) unstable; urgency=low
 
   * switch to autotools style build
