--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 smp-utils (0.98-0.1) unstable; urgency=low
 
-  * xxxxxx
+  * switch binaries back to /usr/bin (or /usr/local/bin)
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 24 Jan 2012 11:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 03 Feb 2012 10:00:00 -0500
 
 smp-utils (0.97-0.1) unstable; urgency=low
 
